# htmx-fastapi

./: .dockerignore  Dockerfile  README.md  compose.yaml  docker-compose.yaml  htmx-fastapi.code-workspace  justfile  makefile  pyproject.toml
docker/: compose.yaml  docker.env  dockerfile
src/: config.py  main.py
src/templates/: base.j2  home.j2  home_hx_payload.j2
tests/: test_main.py
