[project]
    authors         = [{ "name" = "Lucas Parzianello" }]
    dependencies    = [
    "fastapi>=0.115.11",
    "htmx>=0.0.0",
    "jinja2>=3.1.6",
    "rich>=13.9.4",
]
    description     = "Add your description here"
    name            = "htmx-fastapi"
    readme          = "README.md"
    requires-python = ">=3.13"
    version         = "0.1.0"

[dependency-groups]
    dev = ["deptry>=0.23.0", "djlint>=1.36.4", "pylint>=3.3.5", "pytest>=8.3.5", "uvicorn>=0.34.0"]
